--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<script src="node_modules/p5/lib/addons/p5.sound.min.js"></script>
 	<script src="node_modules/p5play/planck.min.js"></script>
 	<script src="node_modules/p5play/p5play.js"></script>
+	<script src="p5.sound.js"></script>
 	<script src="sketch.js"></script>
 </body>
 
