--- a/index.html
+++ b/index.html
@@ -1,15 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/p5.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/p5@latest/lib/addons/p5.sound.min.js"></script>
     <!-- planck -->
     <script src="https://cdn.jsdelivr.net/npm/planck@latest/dist/planck.min.js"></script>
     <!-- Version 3 of p5.play -->
-    <script src="https://cdn.jsdelivr.net/npm/p5.play@3/p5.play.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8" />
-
+    <script src="https://cdn.jsdelivr.net/npm/p5play@3.19.6/p5play.min.js"></script>
   </head>
   <body>
     <main>
